exports[`test should render a date picker with filtered dates 1`] = `
<ResponsiveElement
  className="terra-DatePicker"
  defaultElement={
    <t
      customInput={<DatePickerInput />}
      dateFormat="MM/DD/YYYY"
      dateFormatCalendar=" "
      disabled={false}
      disabledKeyboardNavigation={false}
      dropdownMode="select"
      filterDate={[Function]}
      fixedHeight={true}
      locale="en-US"
      monthsShown={1}
      onBlur={[Function]}
      onChange={[Function]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      placeholderText="MM/DD/YYYY"
      popoverAttachment="top left"
      popoverTargetAttachment="bottom left"
      popoverTargetOffset="10px 0"
      showMonthDropdown={true}
      showYearDropdown={true}
      tetherConstraints={
        Array [
          Object {
            "attachment": "together",
            "to": "window",
          },
        ]
      }
      todayButton="Today"
      utcOffset={0}
      withPortal={true} />
  }
  responsiveTo="window"
  small={
    <t
      customInput={<DatePickerInput />}
      dateFormat="MM/DD/YYYY"
      dateFormatCalendar=" "
      disabled={false}
      disabledKeyboardNavigation={false}
      dropdownMode="select"
      filterDate={[Function]}
      fixedHeight={true}
      locale="en-US"
      monthsShown={1}
      onBlur={[Function]}
      onChange={[Function]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      placeholderText="MM/DD/YYYY"
      popoverAttachment="top left"
      popoverTargetAttachment="bottom left"
      popoverTargetOffset="10px 0"
      showMonthDropdown={true}
      showYearDropdown={true}
      tetherConstraints={
        Array [
          Object {
            "attachment": "together",
            "to": "window",
          },
        ]
      }
      todayButton="Today"
      utcOffset={0}
      withPortal={false} />
  } />
`;

exports[`test should render a default date input and date picker 1`] = `
<ResponsiveElement
  className="terra-DatePicker"
  defaultElement={
    <t
      customInput={<DatePickerInput />}
      dateFormat="MM/DD/YYYY"
      dateFormatCalendar=" "
      disabled={false}
      disabledKeyboardNavigation={false}
      dropdownMode="select"
      fixedHeight={true}
      locale="en-US"
      monthsShown={1}
      onBlur={[Function]}
      onChange={[Function]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      placeholderText="MM/DD/YYYY"
      popoverAttachment="top left"
      popoverTargetAttachment="bottom left"
      popoverTargetOffset="10px 0"
      showMonthDropdown={true}
      showYearDropdown={true}
      tetherConstraints={
        Array [
          Object {
            "attachment": "together",
            "to": "window",
          },
        ]
      }
      todayButton="Today"
      utcOffset={0}
      withPortal={true} />
  }
  responsiveTo="window"
  small={
    <t
      customInput={<DatePickerInput />}
      dateFormat="MM/DD/YYYY"
      dateFormatCalendar=" "
      disabled={false}
      disabledKeyboardNavigation={false}
      dropdownMode="select"
      fixedHeight={true}
      locale="en-US"
      monthsShown={1}
      onBlur={[Function]}
      onChange={[Function]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      placeholderText="MM/DD/YYYY"
      popoverAttachment="top left"
      popoverTargetAttachment="bottom left"
      popoverTargetOffset="10px 0"
      showMonthDropdown={true}
      showYearDropdown={true}
      tetherConstraints={
        Array [
          Object {
            "attachment": "together",
            "to": "window",
          },
        ]
      }
      todayButton="Today"
      utcOffset={0}
      withPortal={false} />
  } />
`;

exports[`test should render a default date input with custom input attributes 1`] = `
<ResponsiveElement
  className="terra-DatePicker"
  defaultElement={
    <t
      customInput={
        <DatePickerInput
          inputAttributes={
            Object {
              "id": "terra-date-input",
              "name": "date-input",
            }
          } />
      }
      dateFormat="MM/DD/YYYY"
      dateFormatCalendar=" "
      disabled={false}
      disabledKeyboardNavigation={false}
      dropdownMode="select"
      fixedHeight={true}
      locale="en-US"
      monthsShown={1}
      onBlur={[Function]}
      onChange={[Function]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      placeholderText="MM/DD/YYYY"
      popoverAttachment="top left"
      popoverTargetAttachment="bottom left"
      popoverTargetOffset="10px 0"
      showMonthDropdown={true}
      showYearDropdown={true}
      tetherConstraints={
        Array [
          Object {
            "attachment": "together",
            "to": "window",
          },
        ]
      }
      todayButton="Today"
      utcOffset={0}
      withPortal={true} />
  }
  responsiveTo="window"
  small={
    <t
      customInput={
        <DatePickerInput
          inputAttributes={
            Object {
              "id": "terra-date-input",
              "name": "date-input",
            }
          } />
      }
      dateFormat="MM/DD/YYYY"
      dateFormatCalendar=" "
      disabled={false}
      disabledKeyboardNavigation={false}
      dropdownMode="select"
      fixedHeight={true}
      locale="en-US"
      monthsShown={1}
      onBlur={[Function]}
      onChange={[Function]}
      onClickOutside={[Function]}
      onFocus={[Function]}
      onMonthChange={[Function]}
      onSelect={[Function]}
      placeholderText="MM/DD/YYYY"
      popoverAttachment="top left"
      popoverTargetAttachment="bottom left"
      popoverTargetOffset="10px 0"
      showMonthDropdown={true}
      showYearDropdown={true}
      tetherConstraints={
        Array [
          Object {
            "attachment": "together",
            "to": "window",
          },
        ]
      }
      todayButton="Today"
      utcOffset={0}
      withPortal={false} />
  } />
`;
